--- a/style.css
+++ b/style.css
@@ -118,3 +118,15 @@ span {
   color: var(--bg);
   background: var(--color);
 }
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: var(--color);
+}
+
+::-webkit-scrollbar-track {
+	background: transparent;
+}
